Fixed to properly escape strings that are being put into Java string literals in the generated RHS classes.  Previously something like the following:
({Token}):tok
-->
:tok.Foo = {description = "This is a multi-line\ndescription"}

containing a double quote or a newline character (even if escaped in the JAPE
grammar) would cause a compile error when creating the JAPE Transducer in
GATE.  Now, strings are properly escaped - newline, tab, etc. are converted to
\n, \t, ...  Double- and single-quote characters and backslashes are backslash
escaped, and non-ASCII characters are rendered as Unicode escapes (e.g.
\u00DB).

Also changed uses of "new Boolean", "new Integer", etc. to "Boolean.valueOf",
etc. and removed superfluous new String("xyz") (replaced by just the
double-quoted literal "xyz") for reduced memory consumption.